# super-swash-bros

./: .prettierignore  Cargo.toml  README.md  analysis.json  compose.yaml  index.html  nx.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vercel.json  webpack.config.js
.github/workflows/: aws.yml
apps/client/: jest.config.ts  project.json  webpack.config.js
apps/client-e2e/: project.json
apps/client/src/: index.html  main.ts
apps/client/src/lib/: is.ts
apps/client/src/objects/: player.ts  socket.ts
apps/client/src/scenes/: index.js  loader.ts  lobby.ts  menu.ts  sailing.js  sailing.ts  worldgen.js  worldgen.ts
apps/link-cable/: Cargo.toml  Dockerfile  project.json  readme.md
apps/link-cable/src/: main.rs
apps/link-cable/src/libs/: api.rs  socket.rs
apps/link-cable/src/libs/api/: rooms.rs  root.rs
apps/link-cable/src/libs/socket/: requests.rs  responses.rs  server.rs  session.rs
apps/lobbying/: Cargo.toml  project.json
apps/lobbying/src/: main.rs
apps/lobbying/src/libs/: socket.rs
apps/lobbying/src/libs/api/: rooms.rs
apps/lobbying/src/libs/socket/: codec.rs  requests.rs  responses.rs  server.rs  session.rs
apps/matchmaking-master/: jest.config.ts  package.json  project.json
apps/matchmaking-master-e2e/: jest.config.ts  project.json
apps/matchmaking-master-e2e/src/matchmaking-master/: matchmaking-master.spec.ts
apps/matchmaking-master/src/: app.config.ts
apps/matchmaking-master/src/rooms/: LobbyRoom.ts
apps/typegen/: Cargo.toml  project.json
apps/typegen/src/: main.rs
libs/api/: package.json  project.json
libs/api/src/: index.ts
libs/utils/: package.json
libs/utils/src/: index.ts
src/: index.ts
src/assets/entity/: player.json
src/objects/: player.ts
src/scenes/: index.js  loader.js  menu.js  sailing.js  worldgen.js
webpack/: base.js  prod.js
(+6 files in other folders)
