[package]
name = "lobbying"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.1"
actix-codec = "0.5.2"
actix-cors = "0.7.0"
actix-web = "4"
actix-web-actors = "4.2.0"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
byteorder = "1.5.0"
env_logger = "0.11.1"
log = "0.4.20"
mime = "0.3.17"
mongodb = "2.1"
rand = "0.8.5"
redis = "0.24.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = "1"
tokio-util = "0.7.10"
typeshare = "1.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
