[package]
name = "lobbying"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
redis = "0.24.0"
actix-web = "4"
mime = "0.3.17"
actix-cors = "0.7.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
