[package]
name = "typegen"
version = "0.1.0"
edition = "2021"


[dependencies]
typeshare-core = "1.7.0"
clap = { version = "4.4.18", features = ["cargo"] }
ignore = "0.4.22"
serde = { version = "1.0.196", features = ["derive"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
